--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
           name: install postgresql
           command: |
             sudo apt-get update
-            sudo apt-get install postgresql postgresql-contrib
+            sudo apt-get install -y postgresql postgresql-contrib
 
       - run:
           name: run tests
